--- a/style.css
+++ b/style.css
@@ -272,3 +272,19 @@ body {
   color: white;
   font-family: 'Mortal Kombat 3';
 }
+
+/*
+стилки к 4 домашнему заданию со (*) 
+*/
+
+.reloadWrap {
+  position: absolute;
+  top: 10%;
+  z-index: 1000;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
+
+.reloadWrap .button {
+  margin-top: 0;
+}
